# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/communication/netmanager_base/netmanager_base_config.gni")

ohos_shared_library("cj_net_connection_ffi") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    boundary_sanitize = true
    all_ubsan = true
    debug = false
  }

  branch_protector_ret = "pac_ret"

  include_dirs = [
    "include",
    "$NETMANAGER_BASE_ROOT/frameworks/js/napi/connection/async_context/include",
    "$NETMANAGER_BASE_ROOT/frameworks/js/napi/connection/async_work/include",
    "$NETMANAGER_BASE_ROOT/frameworks/js/napi/connection/connection_exec/include",
    "$NETMANAGER_BASE_ROOT/frameworks/js/napi/connection/connection_module/include",
    "$NETMANAGER_BASE_ROOT/frameworks/js/napi/connection/net_handle_interface/include",
    "$NETMANAGER_BASE_ROOT/frameworks/js/napi/connection/observer/include",
    "$NETMANAGER_BASE_ROOT/frameworks/js/napi/connection/options/include",
    "$NETMANAGER_BASE_ROOT/utils/log/include",
    "$NETMANAGER_BASE_ROOT/utils/errorcode_utils/include",
    "$NETMANAGER_BASE_ROOT/utils/common_utils/include",
  ]

  sources = [
    "src/net_connection_callback.cpp",
    "src/net_connection_ffi.cpp",
    "src/net_connection_impl.cpp",
  ]

  cflags = [
    "-fstack-protector-strong",
    "-D_FORTIFY_SOURCE=2",
    "-O2",
  ]

  cflags_cc = [
    "-fvisibility=hidden",
    "-fstack-protector-strong",
    "-D_FORTIFY_SOURCE=2",
    "-O2",
  ]

  deps = [
    "$INNERKITS_ROOT/netconnclient:net_conn_manager_if",
    "$NETMANAGER_BASE_ROOT/frameworks/js/napi/connection:connection",
    "$NETMANAGER_BASE_ROOT/frameworks/js/napi/connection:connection_if",
    "$NETMANAGER_BASE_ROOT/utils:net_manager_common",
    "$NETMANAGER_BASE_ROOT/utils/napi_utils:napi_utils",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "ipc:ipc_napi",
    "napi:ace_napi",
    "napi:cj_bind_ffi",
    "napi:cj_bind_native",
  ]

  defines = []

  if (build_ohos_sdk) {
    defines += [ "PREVIEWER" ]
    sources = [ "src/net_connection_mock.cpp" ]
  }

  if (current_os == "ohos") {
    defines += [ "OHOS_PLATFORM" ]
  }

  if (current_os == "mingw") {
    defines += [ "WINDOWS_PLATFORM" ]
  }

  innerapi_tags = [ "platformsdk" ]
  part_name = "netmanager_base"
  subsystem_name = "communication"
}
