# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/communication/netmanager_base/netmanager_base_config.gni")

ohos_shared_library("socket_permission") {
  sources = [ "socket_permission.cpp" ]
  include_dirs = [
    "$NETSYSCONTROLLER_ROOT_DIR/include",
    "$INNERKITS_ROOT/netmanagernative/include",
    "$INNERKITS_ROOT/netstatsclient/include",
    "$NETMANAGERNATIVE_ROOT/include/netsys",
  ]
  deps = [ "$NETSYSCONTROLLER_ROOT_DIR:netsys_controller" ]

  part_name = "netmanager_base"
  subsystem_name = "communication"
}
