#
# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

import("//build/ohos.gni")
import("//foundation/communication/netmanager_base/netmanager_base_config.gni")

config("netd_public_config") {
  include_dirs = [
    "$NETMANAGER_PREBUILTS_DIR/librarys/netd/include/common/include",
    "$NETMANAGER_PREBUILTS_DIR/librarys/netd/include/net_mgr_native/include",
  ]

  libs = [ "$NETMANAGER_PREBUILTS_DIR/librarys/netd/${target_cpu}/libnet_manager_native.z.so" ]
}

ohos_prebuilt_shared_library("libnet_manager_native") {
  source = "$NETMANAGER_PREBUILTS_DIR/librarys/netd/${target_cpu}/libnet_manager_native.z.so"

  public_configs = [ ":netd_public_config" ]

  part_name = "netmanager_base"
  subsystem_name = "communication"
}
