# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//foundation/communication/netmanager_base/netmanager_base_config.gni")

ohos_prebuilt_etc("netmanager_trust") {
  source = "netmanager_trust.json"
  module_install_dir = "profile"
  part_name = "netmanager_base"
  subsystem_name = "communication"
}

ohos_prebuilt_etc("netsysnative_trust") {
  source = "netsysnative_trust.json"
  module_install_dir = "profile"
  part_name = "netmanager_base"
  subsystem_name = "communication"
}

## Install netmanager_base.rc/netmanager_base.rc to /system/etc/init
ohos_prebuilt_etc("netmanager_base.rc") {
  source = "netmanager_base.cfg"
  relative_install_dir = "init"
  part_name = "netmanager_base"
  subsystem_name = "communication"
}

## Install netsysnative.rc/netsysnative.rc to /system/etc/init
ohos_prebuilt_etc("netsysnative.rc") {
  source = "netsysnative.cfg"
  relative_install_dir = "init"
  part_name = "netmanager_base"
  subsystem_name = "communication"
}

## Install resolv.conf to /system/etc
ohos_prebuilt_etc("resolv.conf") {
  source = "resolv.conf"
  part_name = "netmanager_base"
  subsystem_name = "communication"
}

## Install xtables.lock to /system/etc
ohos_prebuilt_etc("xtables.lock") {
  source = "xtables.lock"
  part_name = "netmanager_base"
  subsystem_name = "communication"
}

## Install netdetectionurl.conf to /system/etc
ohos_prebuilt_etc("netdetectionurl.conf") {
  source = "netdetectionurl.conf"
  part_name = "netmanager_base"
  subsystem_name = "communication"
}

## Install initHosts to /system/etc
ohos_prebuilt_etc("initHosts") {
  source = "initHosts"
  part_name = "netmanager_base"
  subsystem_name = "communication"
}

## Install detectionconfig.conf to /system/etc
ohos_prebuilt_etc("detectionconfig.conf") {
  source = "detectionconfig.conf"
  part_name = "netmanager_base"
  subsystem_name = "communication"
}

ohos_prebuilt_etc("hosts") {
  source = "hosts"
  symlink_path = "../../data/service/el1/public/hosts_user/hosts"
  part_name = "netmanager_base"
  subsystem_name = "communication"
}

group("hosts_lnk") {
  if (netmanager_base_enable_feature_hosts) {
    deps = [ ":hosts" ]
  }
}

ohos_prebuilt_etc("wearable_distributed_net_forward") {
  source = "wearable_distributed_net_forward.json"
  part_name = "netmanager_base"
  subsystem_name = "communication"
}

## Install netmanager_base.para to /system/etc/param
ohos_prebuilt_etc("netmanager_base.para") {
  source = "netmanager_base.para"
  relative_install_dir = "param"
  part_name = "netmanager_base"
  subsystem_name = "communication"
}

## Install netmanager_base.para.dac to /system/etc/param
ohos_prebuilt_etc("netmanager_base.para.dac") {
  source = "netmanager_base.para.dac"
  relative_install_dir = "param"
  part_name = "netmanager_base"
  subsystem_name = "communication"
}
