# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/communication/netmanager_base/netmanager_base_config.gni")

ohos_bpf("netsys") {
  sources = [ "src/netsys.c" ]

  include_dirs = [
    "include",
    "//third_party/libbpf/src",
  ]

  subsystem_name = "communication"
  part_name = "netmanager_base"
}

ohos_shared_library("netsys_bpf_utils") {
  sources = [
    "$NETSTATSMANAGER_INNERKITS_SOURCE_DIR/src/net_stats_info.cpp",
    "src/bpf_loader.cpp",
    "src/bpf_stats.cpp",
  ]

  include_dirs = [
    "include",
    "$NETMANAGER_BASE_ROOT/interfaces/innerkits/include",
    "$NETMANAGER_BASE_ROOT/interfaces/innerkits/netmanagernative/include",
    "$NETMANAGER_BASE_ROOT/interfaces/innerkits/netstatsclient/include",
    "$NETMANAGER_BASE_ROOT/utils/log/include",
    "//third_party/elfio",
    "//third_party/elfio/elfio",
  ]

  defines = [
    "NETMGRNATIVE_LOG_TAG = \"NetSysBpf\"",
    "LOG_DOMAIN = 0xD0015B0",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]

  innerapi_tags = [ "platformsdk_indirect" ]
  part_name = "netmanager_base"
  subsystem_name = "communication"
}
