# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("netsys_client") {
  sources = [
    "//foundation/communication/netmanager_base/services/netmanagernative/netsys_client/src/netsys_client.c",
    "//foundation/communication/netmanager_base/services/netmanagernative/netsys_client/src/netsys_tcp_client.c",
  ]

  include_dirs = [ "//foundation/communication/netmanager_base/services/netmanagernative/include/netsys" ]

  external_deps = [ "c_utils:utils" ]

  defines = [
    "NETSYS_CONFIG_DEBUG=0",
    "NETSYS_CLIENT_DEBUG=0",
  ]

  part_name = "netmanager_base"
  subsystem_name = "communication"
}
